// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating abstract entity additions in extension namespace should have one validation failure 1`] = `
Array [
  Object {
    "category": "error",
    "fileMap": null,
    "message": "Abstract Entity DomainEntityName2 additions is not valid.  Abstract entities cannot be extended.",
    "sourceMap": Object {
      "column": 16,
      "line": 18,
      "tokenText": "DomainEntityName2",
    },
    "validatorName": "AbstractEntityMustNotBeExtended",
  },
]
`;

exports[`when validating abstract entity additions should have one validation failure 1`] = `
Array [
  Object {
    "category": "error",
    "fileMap": null,
    "message": "Abstract Entity DomainEntityName additions is not valid.  Abstract entities cannot be extended.",
    "sourceMap": Object {
      "column": 16,
      "line": 11,
      "tokenText": "EdFi",
    },
    "validatorName": "AbstractEntityMustNotBeExtended",
  },
]
`;
